--- a/style.css
+++ b/style.css
@@ -1176,6 +1176,7 @@ table{width: 400px;}
     font-size: 3vh;
   }
   .box{width: 95%;}
+  .font{font-size: 28px!important;}
 
   table{width: 350px; font-size:14px ;}
   .part2 .head{font-size: 26px;}
