--- a/cplus.css
+++ b/cplus.css
@@ -107,6 +107,15 @@ section
 .fa-bars{padding: 5px;}
 button{border: none; outline: none; background: transparent; font-size: 20px; display: none;}
 .fa-bars{ font-size: 22px }
+
+.error
+{
+	width: 100%;
+	height: 400px!important;
+	/*background-color: red;*/
+
+}
+.error h1{ margin: 200px; text-align: center;}
 /*--------------------------------------------------------------*/
 .c-head
 {
@@ -132,6 +141,10 @@ button{border: none; outline: none; background: transparent; font-size: 20px; di
 }
 .c-image{width: 100px; height: 100px;background: red;}
 .img{width: 100%; height: 100% ;}
+ #mainCon
+ {
+ 	width: calc(100% - 100px); padding: 15px;
+ }
 .content
 {
 	width: calc(100% - 100px); 
