--- a/cplus.css
+++ b/cplus.css
@@ -35,7 +35,7 @@ ul li{list-style: none;}
 .content p, .content li{line-height: 1.3;}
 /*.active{
 	background-color: steelblue;
-  color: white;
+  color: white!important;
 }*/
 section
 {
