--- a/cplus_prog/cstyle.css
+++ b/cplus_prog/cstyle.css
@@ -17,7 +17,7 @@
 			display: flex; justify-content: space-between; box-shadow: 5 5 5 grey;}
 		.input{max-width: 600px; width: 100%;}
 		.text{font-size: 16px; font-weight: 500; letter-spacing: 1px; line-height: 1.4;}
-		.img{width: 100%; height: 100%;}
+		.img{width: 100%; height: 100%;padding: 0;}
 		.right{width: calc(50% - 10px);}
 		.right .head {font-size: 20px;font-weight: bold; padding: 10px; }
 			
