--- a/cplus.css
+++ b/cplus.css
@@ -112,7 +112,7 @@ button{border: none; outline: none; background: transparent; font-size: 20px; di
 {
 	width: 100%;
 	height: 400px!important;
-	/*background-color: red;*/
+	background-color: red;
 
 }
 .error h1{ margin: 200px; text-align: center;}
