--- a/cplus.css
+++ b/cplus.css
@@ -111,8 +111,9 @@ button{border: none; outline: none; background: transparent; font-size: 20px; di
 .error
 {
 	width: 100%;
-	height: 400px!important;
-	background-color: red;
+	/*height: 400px!important;*/
+	margin-top: 200px;
+	/*background-color: red;*/
 
 }
 .error h1{ margin: 200px; text-align: center;}
