--- a/cplus_prog/cstyle.css
+++ b/cplus_prog/cstyle.css
@@ -3,7 +3,7 @@
 	margin: 0; padding: 0; box-sizing: border-box; 
 	font-family: sans-serif;
 }
-		h2{color: blue;}
+		/* h2{color: blue;}
 		.container
 		{
 			max-width: 1200px; 
@@ -26,7 +26,6 @@
 		ul {padding-left: 15px;}
 		@media(max-width: 960px)
 		{
-			/*.Output{width: 100%; font-size: 16px;}*/
 			.base{display: flex; flex-direction: column;}
 			.box{width: 100%;flex-direction: column;}
 			.right{width: calc(100%);}
@@ -35,5 +34,41 @@
 		{
 			.Output{width: 100%px; font-size: 12px; letter-spacing: 1px; font-weight: normal; line-height: 1.5;}
 			h2{font-size: 20px;}
-			/*h2{text-align: center;}*/
+		} */
+
+
+		*{margin: 0; padding: 0; box-sizing: border-box; font-family: sans-serif; padding-top: 10px;}
+		h2{color: blue;}
+		.container
+		{max-width: 1000px; padding: 20px; margin: auto;}
+		.base{
+			width: 100%; 
+			/* background: whitesmoke;  */ 
+			/* display: flex; justify-content: space-between;flex-wrap: wrap; */
+		}
+		h3{margin: 15px 0 10px; word-spacing: 1px;}
+		.box{width: 100%; padding: 30px; background: transparent; border-radius: 2px; box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.2);}
+		.input{max-width: 90%; width: 100%; margin: auto;}
+		.text{font-size: 16px; font-weight: 500; letter-spacing: 1px; line-height: 1.4; text-align: justify; margin-left: 20px;}
+		.img{width: 100%;
+			height: 100%;}
+		.head{font-size: 20px;font-weight: bold; padding: 10px; margin: 10px 0;}
+		.Output{width: 90%; padding: 20px; background: #141414; line-height: 1.5; margin: auto; color: white; font-size: 15px;box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.2);}
+		.exp{margin-top: 25px;}
+		.outline{border: 1px solid gainsboro; border-radius: 5px; padding: 3px; font-size: 16px;}
+		@media(max-width: 768px)
+		{
+			.Output{width: 90%;}
+			.base{display: flex; flex-direction: column;}
+			.box{width: 100%; }
+		}
+		@media(max-width: 600px)
+		{
+			.Output{width: 90%; }
+			.text{font-size: 14px;}
+			.box{padding: 0;}
+			.exp{padding: 15px;}
+			h3{font-size: 18px;}
+			.outline{font-size: 14px;}
+			.input{width: 100%; font-size: 14px;}
 		}
