--- a/style.css
+++ b/style.css
@@ -301,17 +301,17 @@ nav .container button
 {
  width: 40%;
  padding: 10px;
- background: blue;
+ /* background: blue; */
  display: flex;
  justify-content: center;
  align-items: center;
 }
 .pic{
   width: 100%;
-  max-height: 450px;
+  /* max-height: 450px; */
   /*min-width: 250px;*/
   height: 100%;
-  padding: 20px;
+  /* padding: 20px; */
   background: lightseagreen;
 }
 
