added resume and linkedin profile

--- a/style.css
+++ b/style.css
@@ -312,7 +312,7 @@ nav .container button
   /*min-width: 250px;*/
   height: 100%;
   /* padding: 20px; */
-  background: lightseagreen;
+  /* background: lightseagreen; */
 }
 
 #about .container .part2
